syntax = "proto3";

import "types.proto";
import "transaction.proto";

package tari.mempool;

// Request type for a received MempoolService request.
message MempoolServiceRequest {
    uint64 request_key = 1;
    oneof request {
        // Indicates a GetStats request. The value of the bool should be ignored.
        bool get_stats = 2;
        // Indicates a GetState request. The value of the bool should be ignored.
        bool get_state = 3;
        // Indicates a GetTxStateByExcessSig request.
        tari.types.Signature get_tx_state_by_excess_sig = 4;
        // Indicates a SubmitTransaction request.
        tari.types.Transaction submit_transaction = 5;
    }
}
